# dgmet

./: CMakeLists.txt  LICENSE  README.md  configure
aux/: README.md  distclean.sh
cmake/: BuildDoxygen.cmake  README.mkd
doc/: CMakeLists.txt  Doxyfile.in  README.mkd  styleguide.mkd
ext/: CMakeLists.txt
src/: CMakeLists.txt  dgmet.cpp  dgmetlib.cpp
src/aux/: constants.hpp  globals.hpp  types.hpp
utils/: README.md  distclean.sh
